Experimental caching of ModelType